# api-ai-finance

./: Dockerfile  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml
app/: config.py
app/controllers/: analytcs_controller.py
app/entities/: analytic_entity.py
app/services/: analytics_service.py
controllers/: analytcs_controller.py
services/: analytics_service.py
