[tool.poetry]
name = "hunter-stocks"
version = "0.1.0"
description = "Stock hunter for swing trade"
authors = ["Jackson Pacheco <jackpa.dev@gmail.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.4"
yahoo_fin = "^0.8.9.1"
finvizfinance = "^0.14.7"
yfinance = "^0.2.33"
fastapi = "^0.105.0"
uvicorn = "^0.23.2"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"